--- a/ovip-0010.md
+++ b/ovip-0010.md
@@ -1,6 +1,6 @@
 ```pseudocode
 OVIP: 10
-Title: Transport Layer Implementation Using Whisper
+Title: Whisper as Transport Layer
 Author: David Riegelnig <david.riegelnig@bitcoinsuisse.com>
 Discussions-To: https://community.openvasp.org/#narrow/stream/21-protocol-.2F.20ovip
 Status: Proposal
@@ -117,11 +117,11 @@ The `instruction` element can have the following values:
 
 Six *OpenVASP Envelopes Types* are defined to implement the transport layer for the OpenVASP protocol. They are reflected by the six values of the `instruction` element (see 4.1.1) and are specified below.
 
-### 5.1. Initiating a Session
+### 5.1. Initiating a Session (INVITE)
 
 1. Input: Session Request Message JSON as specified in OVIP-7, section 4.1 (`sessionMessage`) containing the `receiver`.
 
-2. Retrieve
+2. Retrieve public `transportKey` available from the `receiver`'s' VASP Contract.
 
 3. Generate random `connectionIdentifier`.
 
@@ -129,9 +129,7 @@ Six *OpenVASP Envelopes Types* are defined to implement the transport layer for 
 
 5. Generate ECDH private key (`ecdhPrivate`) and ECDH public key (`ecdhPublic`) based on the elliptic curve Diffie–Hellman (ECDH) key-exchange protocol.
 
-6. Derive `sharedKey` based on the public `transportKey` available from the `receiver`'s' VASP Contract and `ecdhPublic` generated in the previous step.
-
-7. 
+6. Derive `sharedKey` based on the public `transportKey` and `ecdhPublic` generated in the previous step.
 
 8. Create the OpenVASP *Payload* out of the elements defined in 4.1 and the specified values in the table below.</br>
 
@@ -145,41 +143,20 @@ Six *OpenVASP Envelopes Types* are defined to implement the transport layer for 
 
    
 
-9. Create the Envelope out of the elements defined in 3. and the specified values in the table below.</br>
+9. Create the *Envelope* out of the elements defined in 3. and the specified values in the table below.</br>
 
    | Element | Value / Specification                                        |
    | :------ | :----------------------------------------------------------- |
-   | `Topic` | *Responder's* VASP Identifier                                |
-   | `Data`  | Content encrypted (asymmetric, SECP-256k1) with the public `transportKey` available from the *Responder's* VASP Contract |
+   | `Topic` | `receiver`'s VASP Identifier                                 |
+   | `Data`  | Asymmetrically encrypted OpenVASP Payload (see step 8) using SECP-256k1 with the public `transportKey` |
 
    </br>
 
-10. 
+9. Make the *Node* listen to incoming *Envelopes* with topic `topicA` and associated `sharedKey`.
 
-### 5.1. INVITE
+10. Send the Envelope created in step 8.
 
-Sent by an *Active Node* to invite a *Passive Node* for a *Connection*.
-
-Besides the general specifications given on *Envelope*, *Message* and *Payload* Level, the following data items must be set as specified.
-
-#### 5.1.1. Envelope
-
-| Element | Value / Specification                                        |
-| :------ | :----------------------------------------------------------- |
-| `Topic` | *Responder's* VASP Identifier                                |
-| `Data`  | Content encrypted (asymmetric, SECP-256k1) with the public `transportKey` available from the *Responder's* VASP Contract |
-
-#### 5.1.2. Payload
-
-| Element       | Length         | Value                  |
-| :------------ | :------------- | :--------------------- |
-| `instruction` | 3 bits         | `001`                  |
-| `connection`  | 4 bytes        | `connectionIdentifier` |
-| `returnTopic` | 4 bytes        | `topicA`               |
-| `ecdhPK`      | 32 bytes       | `ecdhPublic`           |
-| `ovMessage`   | arbitrary size | `sessionMessage`       |
-
-### 5.2. ACCEPT
+### 5.2. Responding to a Session Initiation (ACCEPT)
 
 Sent by a *Passive Node* to an *Active Node* accepting the invitation for a *Connection*.
 
