--- a/ovip-0010.md
+++ b/ovip-0010.md
@@ -23,10 +23,10 @@ The online documentation about the Whisper protocol can be found here: https://g
 ## 2. Definitions
 
 **Node**</br>
-System operating a Whisper node implementing the transport layer for the OpenVASP protocol.
+System operating a Whisper node providing the transport layer service for the OpenVASP protocol.
 
 **Connection**</br>
-Two *Nodes* sharing a common identifier representing a connection and an associated shared secret, which can be used to exchange encrypted messages. Both *Nodes* have sent each other a Whisper topic to be used to send messages related to this connection.
+Two *Nodes* sharing a common identifier representing a connection and an associated shared key, which can be used to exchange *Envelopes* containing an encrypted *Message*. Both *Nodes* have sent each other a Whisper topic to be used to send messages related to this connection.
 
 **Active Node**</br>
 *Node* inviting another node to establish a *Connection*.
@@ -40,6 +40,12 @@ VASP operating the *Active Node*.
 **Responder**</br>
 VASP operating the *Passive Node*.
 
+**Sender**</br>
+VASP sending an *Envelope*.
+
+**Receiver**</br>
+VASP receiving an *Envelope*.
+
 **Envelope**</br>
 Envelopes are the packets sent and received by Whisper nodes. They contain the encrypted *Message* and metadata for decryption.
 
@@ -48,9 +54,6 @@ Message part of an *Envelope*, containing the message *Payload*, metadata and op
 
 **Payload**</br>
 Actual message payload within a *Message* transmitted by an *Envelope*.
-
-**OpenVASP Envelope Type**</br>
-Envelope type with a defined structure on *Envelope*, *Message* and *Payload* level. The full set of Envelope Types implements the transport layer for the OpenVASP protocol.
 
 ## 3. Envelope Level
 
@@ -87,49 +90,101 @@ Upon receipt of an *Envelope*, if the node detects a known topic, it tries to de
 
 The table below shows the structure of the OpenVASP *Payload*. The last four elements are present depending on the value of the `instruction` element.
 
-| Element       | Length         | Present | Description                                       | See  |
-| :------------ | :------------- | :------ | :------------------------------------------------ | ---- |
-| `version`     | 1 byte         | Always  | OpenVASP *Payload* version, currently set to zero |      |
-| `instruction` | 3 bits         | Always  | Instructions to control a *Connection*            | 4.2. |
-| `flags`       | 5 bits         | Always  | Reserved for future use, must be set to zero      |      |
-| `sender`      | 6 bytes        | Always  | Sender's VASP Identity                            |      |
-| `connection`  | 4 bytes        | Always  | Random *Connection* identifier                    |      |
-| `envelope`    | 4 bytes        | Always  | Randomly set *Envelope* identifier                |      |
-| `envelopeACK` | 4 bytes        |         | Reference to an *Envelope* identifier             |      |
-| `returnTopic` | 4 bytes        |         | Return topic                                      |      |
-| `ecdhPK`      | 32 bytes       |         | ECDH public key                                   |      |
-| `ovMessage`   | arbitrary size |         | OpenVASP Message payload for higher layers        |      |
+| Element       | Length         | Present | Description                                       | See   |
+| ------------- | -------------- | ------- | ------------------------------------------------- | :---- |
+| `version`     | 1 byte         | Always  | OpenVASP *Payload* version, currently set to zero |       |
+| `instruction` | 3 bits         | Always  | Instructions to control a *Connection*            | 4.1.1 |
+| `flags`       | 5 bits         | Always  | Reserved for future use, must be set to zero      |       |
+| `sender`      | 6 bytes        | Always  | Sender's VASP Identity                            |       |
+| `connection`  | 4 bytes        | Always  | *Connection* identifier                           |       |
+| `envelope`    | 4 bytes        | Always  | Randomly set *Envelope* identifier                |       |
+| `envelopeACK` | 4 bytes        |         | Reference to an *Envelope* identifier             |       |
+| `returnTopic` | 4 bytes        |         | Return topic                                      |       |
+| `ecdhPK`      | 32 bytes       |         | ECDH public key                                   |       |
+| `ovMessage`   | arbitrary size |         | Session Message (JSON)                            |       |
 
-#### 4.1.1 Instructions
+#### 4.1.1. Instructions
 
 The `instruction` element can have the following values:
 
-| Value | Name   | Sent by                | Intention                           | See  |
-| :---- | :----- | :--------------------- | :---------------------------------- | :--- |
-| `001` | INVITE | Active node            | Inviting for a *Connection*         | 5.1  |
-| `010` | ACCEPT | Passive node           | Accepting a *Connection* invitation | 5.2  |
-| `011` | DENY   | Passive node           | Denying a *Connection* invitation   | 5.3  |
-| `100` | UPDATE | Active or passive node | Sending a *Connection* *Message*    | 5.4  |
-| `101` | CLOSE  | Active or passive node | Closing a Connection                | 5.5  |
-| `000` | ACK    | Active or passive node | Acknowledge *Message* receipt       | 5.6  |
+| Value | Sent by                    | Description                                        | Used in |
+| ----- | -------------------------- | -------------------------------------------------- | ------- |
+| `001` | *Active Node*              | INVITE - Inviting for a *Connection*               | 6.1     |
+| `010` | *Passive Node*             | ACCEPT Accepting a *Connection* invitation         | 6.2     |
+| `011` | *Passive Node*             | DENY - Denying a *Connection* invitation           | 6.3     |
+| `100` | *Active* or *Passive Node* | UPDATE - Sending an *Envelope* over a *Connection* | 6.4     |
+| `101` | *Active* or *Passive Node* | CLOSE - Closing a *Connection*                     | 6.5     |
+| `000` | *Active* or *Passive Node* | ACK - Acknowledge *Envelope* receipt               | 6.6     |
 
-## 5. Implementing the Session Layer
+## 5. Connections
 
-Six *OpenVASP Envelopes Types* are defined to implement the transport layer for the OpenVASP protocol. They are reflected by the six values of the `instruction` element (see 4.1.1) and are specified below.
+This sections explains how the *Node* is handling *Connections* without being normative about the actual implementation.
 
-### 5.1. Initiating a Session (INVITE)
+### 5.1. Connection Set
 
-1. Input: Session Request Message JSON as specified in OVIP-7, section 4.1 (`sessionMessage`) containing the `receiver`.
+Each *Node* maintains the set of *Connections* established with other *Nodes*. *Connections* have no state, they are either present (and therefore in the set) or not.
 
-2. Retrieve public `transportKey` available from the `receiver`'s' VASP Contract.
+### 5.2. Connection Properties
+
+Relevant *Connection* properties are listed in the table below.
+
+| Element        | Description                                                  |
+| :------------- | :----------------------------------------------------------- |
+| `connection`   | *Connection* identifier                                      |
+| `topic`        | Topic used to identify incoming *Envelopes* related to this *Connection* |
+| `key`          | Shared symmetric key to encrypt/decrypt *Envelopes* sent/received over this *Connection* |
+| `symmetric`    | Flag indicating whether encryption is symmetric or asymmetric |
+| `lastEnvelope` | Last *Envelope* sent over this *Connection*                  |
+| `ackd`         | Flag indicating whether `lastEnvelope` has been acknowledged by the other *Node* |
+| `expiry`       | Time when the waiting period for the acknowledgement of `lastEnvelope` ends and it is resent |
+| `resends`      | Number of times `lastEnvelope` had to be resent              |
+
+### 5.3. Permanent Connection
+
+Each VASP using the OpenVASP protocol must be contactable via its VASP Identifier. The VASP's *Node* must therefore always have this *Connection* in its set, which is called the Permanent *Connection*. It has the following properties:
+
+| Element        | Value                                                        |
+| :------------- | :----------------------------------------------------------- |
+| `connection`   | VASP Identifier                                              |
+| `topic`        | VASP Identifier                                              |
+| `key`          | Shared symmetric key to encrypt/decrypt *Envelopes* sent/received over this *Connection* |
+| `symmetric`    | Flag indicating whether encryption is symmetric or asymmetric |
+| `lastEnvelope` | Last *Envelope* sent over this *Connection*                  |
+| `ackd`         | Flag indicating whether `lastEnvelope` has been acknowledged by the other *Node* |
+| `expiry`       | Time when the waiting period for the acknowledgement of `lastEnvelope` ends and it is resent |
+| `resends`      | Number of times `lastEnvelope` had to be resent              |
+
+## 6. Implementing the Session Layer
+
+An OpenVASP Session knows four state changing operations:
+
+- Initiating a Session,
+- Responding to a Session Initiation,
+- Ending a Session, and
+- Aborting a Session.
+
+The reader is recommended to consult OVIP-7 to understand the session model in full detail. This section describes how a conformant *Node* must implement the four above listed state changing operations.
+
+### 6.1. Initiating a Session
+
+#### 6.1.1. Session Layer Input
+
+| Element          | Type           | Description                        | See                 |
+| ---------------- | -------------- | ---------------------------------- | :------------------ |
+| `receiver`       | Hex(32-bit)    | VASP Identifier of the *Responder* | OVIP-7, section 2.1 |
+| `sessionMessage` | arbitrary size | Session Request Message JSON       | OVIP-7, section 4.1 |
+
+#### 6.1.2. Processing steps
+
+1. Retrieve public `transportKey` available from the `receiver`'s VASP Contract.
 
 3. Generate random `connectionIdentifier`.
 
-4. Generate random `topicA` the *Active Node* will listen for to identify incoming *Envelope* sent over the *Connection*.
+4. Generate random `topicA` the *Node* will listen for to identify incoming *Envelopes* sent over this *Connection*.
 
 5. Generate ECDH private key (`ecdhPrivate`) and ECDH public key (`ecdhPublic`) based on the elliptic curve Diffie–Hellman (ECDH) key-exchange protocol.
 
-6. Derive `sharedKey` based on the public `transportKey` and `ecdhPublic` generated in the previous step.
+6. Derive `sharedKey` based on the `transportKey` and the `ecdhPublic`.
 
 8. Create the OpenVASP *Payload* out of the elements defined in 4.1 and the specified values in the table below.</br>
 
@@ -143,18 +198,171 @@ Six *OpenVASP Envelopes Types* are defined to implement the transport layer for 
 
    
 
-9. Create the *Envelope* out of the elements defined in 3. and the specified values in the table below.</br>
+9. Create *Envelope* out of the elements defined in section 3. and the specified values in the table below.</br>
+
+   | Element | Value / Specification                                        |
+   | ------- | ------------------------------------------------------------ |
+   | `Topic` | `receiver`                                                   |
+   | `Data`  | OpenVASP Payload (see step 6), asymmetrically encrypted with the `transportKey` using SECP-256k1 |
+
+   
+
+8. Add item to the set of *Connections*:</br>
+
+   | Element        | Value                               |
+   | :------------- | :---------------------------------- |
+   | `connection`   | `connectionIdentifier`              |
+   | `topic`        | `topicA`                            |
+   | `key`          | `sharedKey`                         |
+   | `lastEnvelope` | *Envelope* identifier set in step 6 |
+   | `ackd`         | `False`                             |
+   | `expiry`       | Current time + 900 seconds          |
+   | `resends`      | `0`                                 |
+
+
+
+9. Make the *Node* listen to incoming *Envelopes* associated to this Connection.
+
+2. Send *Envelope* created in step 7.
+
+#### 6.1.3. Feedback to Session Layer
+
+- Return that session initiation has taken place.
+- Return `connectionIdentifier` so that the session layer can refer to it throughout the session lifecycle.
+
+### x.1. Initiating a Session
+
+#### x.1.1. Session Layer Input
+
+No session layer input as acknowledgment occurs between *Nodes* on transport layer.
+
+#### x.1.2. Processing steps
+
+1. Retrieve public `transportKey` available from the `receiver`'s VASP Contract.
+
+2. Generate random `connectionIdentifier`.
+
+3. Generate random `topicA` the *Node* will listen for to identify incoming *Envelopes* sent over this *Connection*.
+
+4. Generate ECDH private key (`ecdhPrivate`) and ECDH public key (`ecdhPublic`) based on the elliptic curve Diffie–Hellman (ECDH) key-exchange protocol.
+
+5. Derive `sharedKey` based on the `transportKey` and the `ecdhPublic`.
+
+6. Create the OpenVASP *Payload* out of the elements defined in 4.1 and the specified values in the table below.</br>
+
+   | Element       | Length         | Value                  |
+   | :------------ | :------------- | :--------------------- |
+   | `instruction` | 3 bits         | `001`                  |
+   | `connection`  | 4 bytes        | `connectionIdentifier` |
+   | `returnTopic` | 4 bytes        | `topicA`               |
+   | `ecdhPK`      | 32 bytes       | `ecdhPublic`           |
+   | `ovMessage`   | arbitrary size | `sessionMessage`       |
+
+   
+
+7. Create *Envelope* out of the elements defined in section 3. and the specified values in the table below.</br>
 
    | Element | Value / Specification                                        |
    | :------ | :----------------------------------------------------------- |
-   | `Topic` | `receiver`'s VASP Identifier                                 |
-   | `Data`  | Asymmetrically encrypted OpenVASP Payload (see step 8) using SECP-256k1 with the public `transportKey` |
+   | `Topic` | `receiver`                                                   |
+   | `Data`  | OpenVASP Payload (see step 6), asymmetrically encrypted with the `transportKey` using SECP-256k1 |
 
-   </br>
+   
 
-9. Make the *Node* listen to incoming *Envelopes* with topic `topicA` and associated `sharedKey`.
+8. Add item to the set of *Connections*:</br>
 
-10. Send the Envelope created in step 8.
+   | Element        | Value                                        |
+   | :------------- | :------------------------------------------- |
+   | `connection`   | `connectionIdentifier`                       |
+   | `topic`        | `topicA`                                     |
+   | `key`          | `sharedKey`                                  |
+   | `lastEnvelope` | Randomly set *Envelope* identifier (see 4.1) |
+   | `ackd`         | `False`                                      |
+   | `expiry`       | Current time + 900 seconds                   |
+   | `resends`      | `0`                                          |
+
+
+
+9. Make the *Node* listen to incoming *Envelopes* associated to this Connection.
+
+10. Send *Envelope* created in step 7.
+
+#### x.1.3. Feedback to Session Layer
+
+- Return that session initiation has taken place.
+- Return `connectionIdentifier` so that the session layer can refer to it throughout the session lifecycle.
+
+
+
+
+
+### 6.2. Accepting a Session Initiation
+
+#### 6.2.1. Session Layer Input
+
+| Element                | Type           | Description                | See                 |
+| :--------------------- | :------------- | :------------------------- | :------------------ |
+| `connectionIdentifier` |                | Connection Identifier      | 6.1.2               |
+| `sessionMessage`       | arbitrary size | Session Reply Message JSON | OVIP-7, section 4.2 |
+
+#### 6.2.2. Processing steps
+
+1. Retrieve public `transportKey` available from the `receiver`'s VASP Contract.
+
+2. Generate random `connectionIdentifier`.
+
+3. Generate random `topicA` the *Node* will listen for to identify incoming *Envelopes* sent over this *Connection*.
+
+4. Generate ECDH private key (`ecdhPrivate`) and ECDH public key (`ecdhPublic`) based on the elliptic curve Diffie–Hellman (ECDH) key-exchange protocol.
+
+5. Derive `sharedKey` based on the `transportKey` and the `ecdhPublic`.
+
+6. Create the OpenVASP *Payload* out of the elements defined in 4.1 and the specified values in the table below.</br>
+
+   | Element       | Length         | Value                  |
+   | :------------ | :------------- | :--------------------- |
+   | `instruction` | 3 bits         | `001`                  |
+   | `connection`  | 4 bytes        | `connectionIdentifier` |
+   | `returnTopic` | 4 bytes        | `topicA`               |
+   | `ecdhPK`      | 32 bytes       | `ecdhPublic`           |
+   | `ovMessage`   | arbitrary size | `sessionMessage`       |
+
+   
+
+7. Create *Envelope* out of the elements defined in section 3. and the specified values in the table below.</br>
+
+   | Element | Value / Specification                                        |
+   | :------ | :----------------------------------------------------------- |
+   | `Topic` | `receiver`                                                   |
+   | `Data`  | OpenVASP Payload (see step 6), asymmetrically encrypted with the `transportKey` using SECP-256k1 |
+
+   
+
+8. Add item to the set of *Connections*:</br>
+
+   | Element        | Value                           |
+   | :------------- | :------------------------------ |
+   | `connection`   | `connectionIdentifier`          |
+   | `topic`        | `topicA`                        |
+   | `key`          | `sharedKey`                     |
+   | `lastEnvelope` | *Envelope* identifier (see 4.1) |
+   | `ackd`         | `False`                         |
+   | `expiry`       | Current time + 900 seconds      |
+   | `resends`      | `0`                             |
+
+
+
+9. Make the *Node* listen to incoming *Envelopes* associated to this Connection.
+
+10. Send *Envelope* created in step 7.
+
+#### 6.2.3. Feedback to Session Layer
+
+Return that session initiations has taken place.
+
+
+
+
 
 ### 5.2. Responding to a Session Initiation (ACCEPT)
 
