--- a/ovip-0010.md
+++ b/ovip-0010.md
@@ -26,7 +26,7 @@ The online documentation about the Whisper protocol can be found here: https://g
 System operating a Whisper node providing the transport layer service for the OpenVASP protocol.
 
 **Connection**</br>
-Two *Nodes* sharing a common identifier representing a connection and an associated shared key, which can be used to exchange *Envelopes* containing an encrypted *Message*. Both *Nodes* have sent each other a Whisper topic to be used to send messages related to this connection.
+Two *Nodes* sharing a common identifier representing a connection and an associated shared key, which can be used to exchange *Envelopes* containing an encrypted *Message*. Both *Nodes* have sent each other a Whisper topic to be used to send *Envelopes* related to this connection.
 
 **Active Node**</br>
 *Node* inviting another node to establish a *Connection*.
@@ -109,50 +109,70 @@ The `instruction` element can have the following values:
 
 | Value | Sent by                    | Description                                        | Used in |
 | ----- | -------------------------- | -------------------------------------------------- | ------- |
-| `001` | *Active Node*              | INVITE - Inviting for a *Connection*               | 6.1     |
-| `010` | *Passive Node*             | ACCEPT Accepting a *Connection* invitation         | 6.2     |
-| `011` | *Passive Node*             | DENY - Denying a *Connection* invitation           | 6.3     |
-| `100` | *Active* or *Passive Node* | UPDATE - Sending an *Envelope* over a *Connection* | 6.4     |
-| `101` | *Active* or *Passive Node* | CLOSE - Closing a *Connection*                     | 6.5     |
-| `000` | *Active* or *Passive Node* | ACK - Acknowledge *Envelope* receipt               | 6.6     |
+| `001` | *Active Node*              | Inviting for a *Connection* (INVITE)               | 6.1     |
+| `010` | *Passive Node*             | Accepting a *Connection* invitation (ACCEPT)       | 6.2     |
+| `011` | *Passive Node*             | Denying a *Connection* invitation (DENY)           | 6.3     |
+| `100` | *Active* or *Passive Node* | Sending an *Envelope* over a *Connection* (UPDATE) | 6.4     |
+| `101` | *Active* or *Passive Node* | Closing a *Connection* (CLOSE)                     | 6.5     |
+| `000` | *Active* or *Passive Node* | Acknowledge *Envelope* receipt (ACK)               | 6.6     |
 
 ## 5. Connections
 
-This sections explains how the *Node* is handling *Connections* without being normative about the actual implementation.
+This sections explains how the *Node* is internally handling *Connections* without being normative about the actual implementation.
 
 ### 5.1. Connection Set
 
 Each *Node* maintains the set of *Connections* established with other *Nodes*. *Connections* have no state, they are either present (and therefore in the set) or not.
 
-### 5.2. Connection Properties
+### 5.2. Permanent vs. Transient Connections
 
-Relevant *Connection* properties are listed in the table below.
+Each VASP using the OpenVASP protocol must be contactable via its VASP Identifier. The VASP's *Node* must therefore always have this *Connection* in its set, which is called the **Permanent** *Connection*.
 
-| Element        | Description                                                  |
-| :------------- | :----------------------------------------------------------- |
-| `connection`   | *Connection* identifier                                      |
-| `topic`        | Topic used to identify incoming *Envelopes* related to this *Connection* |
-| `key`          | Shared symmetric key to encrypt/decrypt *Envelopes* sent/received over this *Connection* |
-| `symmetric`    | Flag indicating whether encryption is symmetric or asymmetric |
-| `lastEnvelope` | Last *Envelope* sent over this *Connection*                  |
-| `ackd`         | Flag indicating whether `lastEnvelope` has been acknowledged by the other *Node* |
-| `expiry`       | Time when the waiting period for the acknowledgement of `lastEnvelope` ends and it is resent |
-| `resends`      | Number of times `lastEnvelope` had to be resent              |
+A *Node* serving several VASPs (or a VASP group operating with different legal entities) might have several Permanent *Connections* in its set.
 
-### 5.3. Permanent Connection
+All other Connections are called **Transient** *Connections*, as they are only in the set as long as they are open.
 
-Each VASP using the OpenVASP protocol must be contactable via its VASP Identifier. The VASP's *Node* must therefore always have this *Connection* in its set, which is called the Permanent *Connection*. It has the following properties:
+### 5.3. Connection Properties
 
-| Element        | Value                                                        |
-| :------------- | :----------------------------------------------------------- |
-| `connection`   | VASP Identifier                                              |
-| `topic`        | VASP Identifier                                              |
-| `key`          | Shared symmetric key to encrypt/decrypt *Envelopes* sent/received over this *Connection* |
-| `symmetric`    | Flag indicating whether encryption is symmetric or asymmetric |
-| `lastEnvelope` | Last *Envelope* sent over this *Connection*                  |
-| `ackd`         | Flag indicating whether `lastEnvelope` has been acknowledged by the other *Node* |
-| `expiry`       | Time when the waiting period for the acknowledgement of `lastEnvelope` ends and it is resent |
-| `resends`      | Number of times `lastEnvelope` had to be resent              |
+*Connections* have the following properties:
+
+| Element       | Description                                                  | Value in case of a Transient Connection                    | Value in case of a Permanent Connection    |
+| :------------ | :----------------------------------------------------------- | :--------------------------------------------------------- | :----------------------------------------- |
+| `isPermanent` | Flag indicating whether this *Connection* is a Permanent *Connection* (see 5.2) | `False`                                                    | `True`                                     |
+| `connection`  | *Connection* identifier                                      | *Connection* identifier                                    | VASP Identifier                            |
+| `topic`       | Topic used to identify incoming *Envelopes* related to this *Connection* | Topic                                                      | VASP Identifier                            |
+| `key`         | Key used to encrypt/decrypt *Envelopes* sent/received over this *Connection*. | Shared key to encrypt/decrypt outbound/inbound *Envelopes* | Private key to decrypt inbound *Envelopes* |
+
+### 5.4. Outbound Envelope Queue
+
+The *Node* maintains a queue of *Envelopes* sent in order to keep track whether their receipt has been acknowledged by the receiving *Node*. Queue items have the following properties:
+
+| Element      | Description                                                  |
+| :----------- | :----------------------------------------------------------- |
+| `envelopeID` | *Envelope* identifier                                        |
+| `envelope`   | *Envelope*                                                   |
+| `expiry`     | Time when the waiting period for the acknowledgement of `envelope` ends and it is resent |
+| `resends`    | Number of times `envelope` had to be resent                  |
+| `connection` | Identifier of the associated *Connection*                    |
+
+### 5.5. Validating Inbound Envelopes
+
+Inbound *Envelopes* must be validated based on the following steps.
+
+1. Check whether `Topic` (see 3) is in the *Connection* set (see 5.1).
+2. Check whether `Data` (see 3) can be decrypted with the associated `key` in the Connection set (see 5.1).
+3. Check whether the `payload` element of the decrypted message (see 4) conforms to the OpenVASP *Payload* (see 4.1).
+
+If one of the above mentioned checks fail, the Envelope is ignored and deleted.
+
+### 5.6. Acknowledging Inbound Envelopes
+
+*Nodes* must acknowledge the receipt of each *Envelope* containing a valid OpenVASP *Payload* by returning an OpenVASP *Envelope* of type ACK. The only exception are *Envelopes* of type ACK, which must not be acknowledged.
+
+The *Envelope* is acknowledged based on the following steps.
+
+1.  Check whether `instruction` of the *Envelope's* payload is not `000` (type ACK, see 4.1.1). If it is of type ACK, abort the process.
+2. 
 
 ## 6. Implementing the Session Layer
 
@@ -209,21 +229,30 @@ The reader is recommended to consult OVIP-7 to understand the session model in f
 
 8. Add item to the set of *Connections*:</br>
 
-   | Element        | Value                               |
-   | :------------- | :---------------------------------- |
-   | `connection`   | `connectionIdentifier`              |
-   | `topic`        | `topicA`                            |
-   | `key`          | `sharedKey`                         |
-   | `lastEnvelope` | *Envelope* identifier set in step 6 |
-   | `ackd`         | `False`                             |
-   | `expiry`       | Current time + 900 seconds          |
-   | `resends`      | `0`                                 |
+   | Element       | Value                  |
+   | :------------ | :--------------------- |
+   | `isPermanent` | `False`                |
+   | `connection`  | `connectionIdentifier` |
+   | `topic`       | `topicA`               |
+   | `key`         | `sharedKey`            |
 
 
 
-9. Make the *Node* listen to incoming *Envelopes* associated to this Connection.
+9. Add item to the Outbound *Envelope* Queue:</br>
 
-2. Send *Envelope* created in step 7.
+   | Element      | Value                               |
+   | :----------- | :---------------------------------- |
+   | `envelopeID` | *Envelope* identifier set in step 6 |
+   | `envelope`   | Envelope created in step 7          |
+   | `expiry`     | Current time + 900 seconds          |
+   | `resends`    | `0`                                 |
+   | `connection` | `connectionIdentifier`              |
+
+   
+
+10. Make the *Node* listen to incoming *Envelopes* associated to this *Connection*.
+
+11. Send *Envelope* created in step 7.
 
 #### 6.1.3. Feedback to Session Layer
 
