--- a/ovip-0010.md
+++ b/ovip-0010.md
@@ -90,18 +90,18 @@ Upon receipt of an *Envelope*, if the node detects a known topic, it tries to de
 
 The table below shows the structure of the OpenVASP *Payload*. The last four elements are present depending on the value of the `instruction` element.
 
-| Element       | Length         | Present | Description                                       | See   |
-| ------------- | -------------- | ------- | ------------------------------------------------- | :---- |
-| `version`     | 1 byte         | Always  | OpenVASP *Payload* version, currently set to zero |       |
-| `instruction` | 3 bits         | Always  | Instructions to control a *Connection*            | 4.1.1 |
-| `flags`       | 5 bits         | Always  | Reserved for future use, must be set to zero      |       |
-| `sender`      | 6 bytes        | Always  | Sender's VASP Identity                            |       |
-| `connection`  | 4 bytes        | Always  | *Connection* identifier                           |       |
-| `envelope`    | 4 bytes        | Always  | Randomly set *Envelope* identifier                |       |
-| `envelopeACK` | 4 bytes        |         | Reference to an *Envelope* identifier             |       |
-| `returnTopic` | 4 bytes        |         | Return topic                                      |       |
-| `ecdhPK`      | 32 bytes       |         | ECDH public key                                   |       |
-| `ovMessage`   | arbitrary size |         | Session Message (JSON)                            |       |
+| Element        | Length         | Present | Description                                       | See   |
+| -------------- | -------------- | ------- | ------------------------------------------------- | :---- |
+| `version`      | 1 byte         | Always  | OpenVASP *Payload* version, currently set to zero |       |
+| `instruction`  | 3 bits         | Always  | Instructions to control a *Connection*            | 4.1.1 |
+| `flags`        | 5 bits         | Always  | Reserved for future use, must be set to zero      |       |
+| `sender`       | 6 bytes        | Always  | Sender's VASP Identity                            |       |
+| `connectionID` | 4 bytes        | Always  | *Connection* identifier                           |       |
+| `envelope`     | 4 bytes        | Always  | Randomly set *Envelope* identifier                |       |
+| `envelopeACK`  | 4 bytes        |         | Reference to an *Envelope* identifier             |       |
+| `returnTopic`  | 4 bytes        |         | Return topic                                      |       |
+| `ecdhPK`       | 32 bytes       |         | ECDH public key                                   |       |
+| `ovMessage`    | arbitrary size |         | Session Message (JSON)                            |       |
 
 #### 4.1.1. Instructions
 
@@ -115,6 +115,15 @@ The `instruction` element can have the following values:
 | `100` | *Active* or *Passive Node* | Sending an *Envelope* over a *Connection* (UPDATE) | 6.4     |
 | `101` | *Active* or *Passive Node* | Closing a *Connection* (CLOSE)                     | 6.5     |
 | `000` | *Active* or *Passive Node* | Acknowledge *Envelope* receipt (ACK)               | 6.6     |
+
+#### 4.1.2. Acknowledgment
+
+*Nodes* must acknowledge the receipt of certain *Envelopes* by returning an OpenVASP *Envelope* of type ACK. The table below shows which Envelopes must be acknowledged.
+
+| To be acknowledged | Envelopes with `instruction` value (see 4.1.1) |
+| ------------------ | ---------------------------------------------- |
+| YES                | INVITE, ACCEPT, UPDATE, CLOSE                  |
+| NO                 | DENY, ACK                                      |
 
 ## 5. Connections
 
@@ -136,16 +145,19 @@ All other Connections are called **Transient** *Connections*, as they are only i
 
 *Connections* have the following properties:
 
-| Element       | Description                                                  | Value in case of a Transient Connection                    | Value in case of a Permanent Connection    |
-| :------------ | :----------------------------------------------------------- | :--------------------------------------------------------- | :----------------------------------------- |
-| `isPermanent` | Flag indicating whether this *Connection* is a Permanent *Connection* (see 5.2) | `False`                                                    | `True`                                     |
-| `connection`  | *Connection* identifier                                      | *Connection* identifier                                    | VASP Identifier                            |
-| `topic`       | Topic used to identify incoming *Envelopes* related to this *Connection* | Topic                                                      | VASP Identifier                            |
-| `key`         | Key used to encrypt/decrypt *Envelopes* sent/received over this *Connection*. | Shared key to encrypt/decrypt outbound/inbound *Envelopes* | Private key to decrypt inbound *Envelopes* |
+| Element         | Description                                                  | Value in case of a Transient Connection                    | Value in case of a Permanent Connection    |
+| :-------------- | :----------------------------------------------------------- | :--------------------------------------------------------- | :----------------------------------------- |
+| `isPermanent`   | Flag indicating whether this *Connection* is a Permanent *Connection* (see 5.2) | `False`                                                    | `True`                                     |
+| `connection`    | *Connection* identifier                                      | *Connection* identifier                                    | VASP Identifier                            |
+| `inboundTopic`  | Topic used to identify incoming *Envelopes* related to this *Connection* | Randomly set Topic                                         | VASP Identifier                            |
+| `outboundTopic` | Topic used to label outgoing *Envelopes* related to this *Connection* | Topic received from connected *Node*                       | n/a                                        |
+| `key`           | Key used to encrypt/decrypt *Envelopes* sent/received over this *Connection*. | Shared key to encrypt/decrypt outbound/inbound *Envelopes* | Private key to decrypt inbound *Envelopes* |
 
 ### 5.4. Outbound Envelope Queue
 
-The *Node* maintains a queue of *Envelopes* sent in order to keep track whether their receipt has been acknowledged by the receiving *Node*. Queue items have the following properties:
+The *Node* maintains a queue of *Envelopes* sent in order to keep track whether their receipt has been acknowledged by the receiving *Node*. Only *Envelopes* that must be acknowledged are included in the queue (see 4.1.2).
+
+Queue items have the following properties:
 
 | Element      | Description                                                  |
 | :----------- | :----------------------------------------------------------- |
@@ -157,21 +169,20 @@ The *Node* maintains a queue of *Envelopes* sent in order to keep track whether 
 
 ### 5.5. Validating Inbound Envelopes
 
-Inbound *Envelopes* must be validated based on the following steps.
+Inbound *Envelopes* must be validated as per following steps.
 
-1. Check whether `Topic` (see 3) is in the *Connection* set (see 5.1).
-2. Check whether `Data` (see 3) can be decrypted with the associated `key` in the Connection set (see 5.1).
+1. Check whether `Topic` (see 3) is present as an `inboundTopic` in the *Connection* set (see 5.3).
+2. Check whether `Data` (see 3) can be decrypted with the associated `key` in the Connection set (see 5.3).
 3. Check whether the `payload` element of the decrypted message (see 4) conforms to the OpenVASP *Payload* (see 4.1).
 
 If one of the above mentioned checks fail, the Envelope is ignored and deleted.
 
 ### 5.6. Acknowledging Inbound Envelopes
 
-*Nodes* must acknowledge the receipt of each *Envelope* containing a valid OpenVASP *Payload* by returning an OpenVASP *Envelope* of type ACK. The only exception are *Envelopes* of type ACK, which must not be acknowledged.
+*Nodes* must acknowledge certain *Envelopes* (see 4.1.2) by returning an OpenVASP *Envelope* of type ACK.
 
-The *Envelope* is acknowledged based on the following steps.
+If required, the *Envelope* is acknowledged as per following steps.
 
-1.  Check whether `instruction` of the *Envelope's* payload is not `000` (type ACK, see 4.1.1). If it is of type ACK, abort the process.
 2. 
 
 ## 6. Implementing the Session Layer
@@ -187,14 +198,16 @@ The reader is recommended to consult OVIP-7 to understand the session model in f
 
 ### 6.1. Initiating a Session
 
-#### 6.1.1. Session Layer Input
+#### 6.1.1. Active Node Initiates Session
+
+##### 6.1.1.1. Session Layer Input
 
 | Element          | Type           | Description                        | See                 |
 | ---------------- | -------------- | ---------------------------------- | :------------------ |
 | `receiver`       | Hex(32-bit)    | VASP Identifier of the *Responder* | OVIP-7, section 2.1 |
 | `sessionMessage` | arbitrary size | Session Request Message JSON       | OVIP-7, section 4.1 |
 
-#### 6.1.2. Processing steps
+##### 6.1.1.2. Processing steps
 
 1. Retrieve public `transportKey` available from the `receiver`'s VASP Contract.
 
@@ -208,13 +221,13 @@ The reader is recommended to consult OVIP-7 to understand the session model in f
 
 8. Create the OpenVASP *Payload* out of the elements defined in 4.1 and the specified values in the table below.</br>
 
-   | Element       | Length         | Value                  |
-   | :------------ | :------------- | :--------------------- |
-   | `instruction` | 3 bits         | `001`                  |
-   | `connection`  | 4 bytes        | `connectionIdentifier` |
-   | `returnTopic` | 4 bytes        | `topicA`               |
-   | `ecdhPK`      | 32 bytes       | `ecdhPublic`           |
-   | `ovMessage`   | arbitrary size | `sessionMessage`       |
+   | Element        | Length         | Value                  |
+   | :------------- | :------------- | :--------------------- |
+   | `instruction`  | 3 bits         | `001`                  |
+   | `connectionID` | 4 bytes        | `connectionIdentifier` |
+   | `returnTopic`  | 4 bytes        | `topicA`               |
+   | `ecdhPK`       | 32 bytes       | `ecdhPublic`           |
+   | `ovMessage`    | arbitrary size | `sessionMessage`       |
 
    
 
@@ -229,12 +242,13 @@ The reader is recommended to consult OVIP-7 to understand the session model in f
 
 8. Add item to the set of *Connections*:</br>
 
-   | Element       | Value                  |
-   | :------------ | :--------------------- |
-   | `isPermanent` | `False`                |
-   | `connection`  | `connectionIdentifier` |
-   | `topic`       | `topicA`               |
-   | `key`         | `sharedKey`            |
+   | Element         | Value                  |
+   | :-------------- | :--------------------- |
+   | `isPermanent`   | `False`                |
+   | `connection`    | `connectionIdentifier` |
+   | `inboundTopic`  | `topicA`               |
+   | `outboundTopic` | (empty)                |
+   | `key`           | `sharedKey`            |
 
 
 
@@ -254,73 +268,40 @@ The reader is recommended to consult OVIP-7 to understand the session model in f
 
 11. Send *Envelope* created in step 7.
 
-#### 6.1.3. Feedback to Session Layer
+##### 6.1.1.3. Feedback to Session Layer
 
 - Return that session initiation has taken place.
 - Return `connectionIdentifier` so that the session layer can refer to it throughout the session lifecycle.
 
-### x.1. Initiating a Session
+#### 6.1.2. Passive Node Receives Session Initiation
 
-#### x.1.1. Session Layer Input
+##### 6.1.2.1. Inbound Envelope Validation
 
-No session layer input as acknowledgment occurs between *Nodes* on transport layer.
+Text
 
-#### x.1.2. Processing steps
+##### 6.1.2.2. Processing Steps
 
-1. Retrieve public `transportKey` available from the `receiver`'s VASP Contract.
+1. Read `sender`, `connectionID`, `envelope`, `returnTopic`, `ecdhPK` and `ovMessage` from payload of received *Envelope*.
 
-2. Generate random `connectionIdentifier`.
+2. Generate random `topicB` the *Node* will listen for to identify incoming *Envelopes* sent over this *Connection*.
 
-3. Generate random `topicA` the *Node* will listen for to identify incoming *Envelopes* sent over this *Connection*.
+3. Derive `sharedKey` based on the `ecdhPK` and the `ecdhPublic`.
 
-4. Generate ECDH private key (`ecdhPrivate`) and ECDH public key (`ecdhPublic`) based on the elliptic curve Diffie–Hellman (ECDH) key-exchange protocol.
+4. 
 
-5. Derive `sharedKey` based on the `transportKey` and the `ecdhPublic`.
+5. Add item to the set of *Connections*:</br>
 
-6. Create the OpenVASP *Payload* out of the elements defined in 4.1 and the specified values in the table below.</br>
-
-   | Element       | Length         | Value                  |
-   | :------------ | :------------- | :--------------------- |
-   | `instruction` | 3 bits         | `001`                  |
-   | `connection`  | 4 bytes        | `connectionIdentifier` |
-   | `returnTopic` | 4 bytes        | `topicA`               |
-   | `ecdhPK`      | 32 bytes       | `ecdhPublic`           |
-   | `ovMessage`   | arbitrary size | `sessionMessage`       |
-
-   
-
-7. Create *Envelope* out of the elements defined in section 3. and the specified values in the table below.</br>
-
-   | Element | Value / Specification                                        |
-   | :------ | :----------------------------------------------------------- |
-   | `Topic` | `receiver`                                                   |
-   | `Data`  | OpenVASP Payload (see step 6), asymmetrically encrypted with the `transportKey` using SECP-256k1 |
-
-   
-
-8. Add item to the set of *Connections*:</br>
-
-   | Element        | Value                                        |
-   | :------------- | :------------------------------------------- |
-   | `connection`   | `connectionIdentifier`                       |
-   | `topic`        | `topicA`                                     |
-   | `key`          | `sharedKey`                                  |
-   | `lastEnvelope` | Randomly set *Envelope* identifier (see 4.1) |
-   | `ackd`         | `False`                                      |
-   | `expiry`       | Current time + 900 seconds                   |
-   | `resends`      | `0`                                          |
+   | Element         | Value          |
+   | :-------------- | :------------- |
+   | `isPermanent`   | `False`        |
+   | `connection`    | `connectionID` |
+   | `inboundTopic`  | `topicB`       |
+   | `outboundTopic` | `returnTopic`  |
+   | `key`           | `sharedKey`    |
 
 
 
-9. Make the *Node* listen to incoming *Envelopes* associated to this Connection.
-
-10. Send *Envelope* created in step 7.
-
-#### x.1.3. Feedback to Session Layer
-
-- Return that session initiation has taken place.
-- Return `connectionIdentifier` so that the session layer can refer to it throughout the session lifecycle.
-
+9. Make the *Node* listen to incoming *Envelopes* associated to this *Connection*.
 
 
 
@@ -493,6 +474,8 @@ Besides the general specifications given on *Envelope*, *Message* and *Payload* 
 | :------------ | :------ | :------------------------------------------------ |
 | `instruction` | 3 bits  | `000`                                             |
 | `envelopeACK` | 4 bytes | `envelope` value of *Envelope* to be acknowledged |
+
+
 
 ## 6. Expected Node Behavior
 
